# Wim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
Lib/Browser/: ErrorPage.cpp  ErrorPage.h  FuzzyMatch.h  History.cpp  History.h  Mru.cpp  Mru.h  Palette.cpp  Palette.h  Places.cpp  Places.h  Session.cpp  Session.h  Url.cpp  Url.h
Scripts/: clean.mjs  compile-macos.mjs  compile-windows.mjs  compile.mjs  lib.mjs  run-macos.mjs  run-windows.mjs  run.mjs  web-dev.mjs
Source/: Control.h  Main.cpp  PageScript.h  TabSwitcher.h  Types.h
Tests/: CMakeLists.txt  ErrorPageTests.cpp  FuzzyMatchTests.cpp  HistoryTests.cpp  MruTests.cpp  PaletteTests.cpp  PlacesTests.cpp  SessionTests.cpp  TestSupport.h  UrlTests.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  state.ts  style.css
